# arrow_server

./: .gitignore  API.md  Cargo.toml  README.md  compose.yml.example  openapi.yaml
.github/: copilot-instructions.md
bruno/: collection.bru
bruno/auth/: Refresh.bru
bruno/categories/: create-category.bru
bruno/orders/: update-order-status.bru
bruno/roles/: add-permission.bru  create-role.bru  remove-permission.bru
src/: api.rs  lib.rs  main.rs
src/api/: config.rs  extractors.rs  mod.rs  request.rs  response.rs  server.rs
src/api/controllers/: category_controller.rs  mod.rs  order_controller.rs  product_controller.rs  role_controller.rs  user_controller.rs
src/api/controllers/dto/: mod.rs  order_dto.rs  product_dto.rs  role_dto.rs  (+1 more)
src/api/routes/: auth_routes.rs  mod.rs  order_routes.rs  product_routes.rs  role_routes.rs  user_routes.rs
src/controllers/: user_controller.rs
src/controllers/dto/: login_dto.rs  mod.rs  user_dto.rs
src/data/: database.rs
src/data/models/: mod.rs  order.rs  roles.rs  schema.rs  user_roles.rs
src/security/: auth.rs  errors.rs  jwt.rs  mod.rs
src/services/: auth_service.rs  errors.rs  mod.rs  order_service.rs  product_category_service.rs  product_service.rs  role_service.rs
src/utils/: mappers.rs
tests/: category_controller_tests.rs  database_tests.rs  mod.rs  order_controller_tests.rs  order_product_repo_tests.rs  order_repo_tests.rs  order_service_tests.rs  product_controller_tests.rs  product_service_tests.rs  role_controller_tests.rs  user_controller_tests.rs  user_repo_tests.rs  user_role_repo_tests.rs
(+10 files in other folders)
