[package]
name = "arrow_server"
version = "0.1.0"
edition = "2024"

[lib]
name = "arrow_server_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.89"
axum = "0.8.7"
chrono = "0.4.42"
bigdecimal = "0.4"
diesel = { version = "2.3.3", features = ["chrono", "mysql", "numeric"] }
diesel-async = { version = "0.7.4", features = ["mysql", "deadpool"] }
dotenvy = "0.15.7"
once_cell = "1.21.3"
serial_test = "3.2.0"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
azure_storage_blob = "0.7.0"
azure_identity = "0.30.0"
azure_storage = "0.21.0"
tower-http = { version = "0.6.7", features = ["cors"] }
tracing = { version = "0.1.43", features = ["attributes"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
axum-extra = { version = "0.12.2", features = ["typed-header"] }

[dev-dependencies]
http-body-util = "0.1.3"
serde_json = "1.0.145"
tower = "0.5.2"
